--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   get: ^4.6.5
   pinput: ^3.0.1
+  dotted_border: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
