--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,9 +38,11 @@ dependencies:
   google_fonts: ^5.1.0
   flutter_svg: ^2.0.7
   flutter_screenutil: ^5.9.0
-  get: ^4.6.5
+  get: ^4.6.6
   pinput: ^3.0.1
   dotted_border: ^2.0.0+3
+  url_launcher: ^6.1.14
+  google_maps_flutter: ^2.5.0
 
 dev_dependencies:
   flutter_test:
