added image upload functionality

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,10 +43,20 @@ dependencies:
   dotted_border: ^2.0.0+3
   url_launcher: ^6.1.14
   google_maps_flutter: ^2.5.0
+  image_picker: ^1.0.1
+  dotted_line: ^3.2.2
+  lottie: ^2.6.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  image_path: "assets/splash/logo.png"
+  # adaptive_icon_foreground: "assets/splash/logo.png"
+  android: true
+  adaptive_icon_background: "#FECC09"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -70,6 +80,7 @@ flutter:
   assets:
     - assets/icons/
     - assets/images/
+    - assets/splash/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
