--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,11 +52,11 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
 
-flutter_icons:
+flutter_launcher_icons:
   image_path: "assets/splash/logo.png"
   # adaptive_icon_foreground: "assets/splash/logo.png"
   android: true
-  adaptive_icon_background: "#FECC09"
+  # adaptive_icon_background: "#FECC09"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
